# RemoteBackupServer

./: .gitignore  CMakeLists.txt  Server.hpp  User.cpp  User.h  connection_handler.cpp  connection_handler.h  connection_handler_new.cpp  connection_handler_new.h  main.cpp  main_new.cpp  server.cpp  server.h  server.hpp  server_new.cpp  server_new.h
ChecksumAPI/: Checksum.cpp  Checksum.h  SHA256.cpp  SHA256.h
OldServer/: Server.hpp
OldServer2/: connection_handler.cpp  connection_handler.h  main.cpp  server.h
synchronized_folders/guido/: server_1.txt
user_info/: login_info
